--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,5 @@
 <script src="https://unpkg.com/mermaid@7.1.2/dist/mermaid.min.js"></script>
-<script>mermaid.initialize({startOnLoad:true});</script>
+<script>
+mermaid.initialize({startOnLoad:true});
+window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'))
+</script>
