--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,11 @@
       {{ content }}
     </div>
 
+    <script src="https://unpkg.com/mermaid@7.1.2/dist/mermaid.min.js"></script>
+    <script>
+		mermaid.initialize({startOnLoad:true});
+		window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'))
+    </script>
+
   </body>
 </html>
