enable js Khan/KaTeX

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 		mermaid.initialize({startOnLoad:true});
 		window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'))
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.9.0/dist/katex.min.js" integrity="sha384-jmxIlussZWB7qCuB+PgKG1uLjjxbVVIayPJwi6cG6Zb4YKq0JIw+OMnkkEC7kYCq" crossorigin="anonymous"></script>
 
   </body>
 </html>
