--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,6 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/katex@0.9.0/dist/katex.min.js" integrity="sha384-jmxIlussZWB7qCuB+PgKG1uLjjxbVVIayPJwi6cG6Zb4YKq0JIw+OMnkkEC7kYCq" crossorigin="anonymous"></script>
 
+    {% include google-analytics.html %}
   </body>
 </html>
