add disqus as comments service

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
       {{ content }}
     </div>
 
+    {% include disqus.html %}
+
     <script src="https://unpkg.com/mermaid@7.1.2/dist/mermaid.min.js"></script>
     <script>
 		mermaid.initialize({startOnLoad:true});
