--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 		window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'))
     </script>
     <script src="https://cdn.jsdelivr.net/npm/katex@0.9.0/dist/katex.min.js" integrity="sha384-jmxIlussZWB7qCuB+PgKG1uLjjxbVVIayPJwi6cG6Zb4YKq0JIw+OMnkkEC7kYCq" crossorigin="anonymous"></script>
-
     {% include google-analytics.html %}
+    <script id="dsq-count-scr" src="//liduan-worklog.disqus.com/count.js" async></script>
   </body>
 </html>
