--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -11,7 +11,7 @@
     (function() {
       var d = document, s = d.createElement('script');
 
-      s.src = 'https://good2all-com.disqus.com/embed.js';
+      s.src = 'https://liduan-worklog.disqus.com/embed.js';
 
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
