update sidebar menu to have search page disable disqus on search page

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if page.title != 'Home' and page.comments != false %}
+{% if page.title != 'Home' and page.title != 'Search' and page.comments != false %}
 
   <div id="disqus_thread"></div>
   <script>
