fix search script issue obj (not undefined)

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -28,7 +28,7 @@ const hitTemplate = function(hit) {
 
   let content = "";
   let htmlObj = hit._highlightResult.html;
-  if(typeof htmlObj === 'undefined') {
+  if(typeof htmlObj !== 'undefined') {
     if(htmlObj.hasOwnProperty('value')) {
       content = htmlObj.value;
     }
