update search page item layout

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -37,8 +37,8 @@ const hitTemplate = function(hit) {
 
   return `
     <div class="post-item">
-      <span class="post-meta">${date}</span>
       <h2><a class="post-link" href="${url}">${title}</a></h2>
+      <span class="post-date">${date}</span>
       <div class="post-snippet">${content}</div>
     </div>
   `;
