add freshping checking page link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+      <span class="sidebar-nav-item"><a href='https://statuspage.freshping.io/17529-liduan' target="_blank">Status</a></span>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
