--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,3 +6,17 @@ layout: default
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
+
+<div class="related">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- blog banner -->
+  <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4673823046199887"
+     data-ad-slot="6780243490"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
