--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,20 @@ layout: default
 </div>
 
 <div class="related">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- blog banner -->
+  <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4673823046199887"
+     data-ad-slot="6780243490"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+
+<div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
